--- a/EdumeLMS/src/pages/component/Component.css
+++ b/EdumeLMS/src/pages/component/Component.css
@@ -97,11 +97,14 @@
     background-size: cover;
 }
 
+
+/* ------------------------------------------------------------------  */
 #navbar {
     display: flex;
     justify-content: flex-end;
     position: relative;
-    top: -580px;
+    height: 0px;
+    bottom: -25px;
     
 }
 
@@ -109,8 +112,8 @@
     list-style: none;
     margin-right: 60px;
     font-size: 18px;
-    color: white;
     cursor: pointer;
+    color: white;
 }
 
 #navbar li:hover {
@@ -220,3 +223,179 @@
 .pay img {
     height: 25px;
 }
+
+.footerName {
+    display: flex;
+    justify-content: center;
+    color: white;
+    background-color: black;
+    padding: 5px 0;
+    border-radius: 3px;
+}
+
+
+/* ------------------------------------------------------------------------------------- */
+
+.signInPage {
+    height: 100vh;
+    text-align: center;
+}
+
+.signUpPage {
+    height: 100vh;
+}
+
+.photo02 {
+    height: 100vh;
+    width: 100%;
+}
+
+.logingCont {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    top: 24%;
+    text-align: center;
+    width: 90%;
+    padding: 0 20px;
+}
+
+
+
+.loging {
+    background-color: rgba(255, 255, 255, 0.4);
+    margin: 0 20px;
+    width: 450px;
+    height: 500px;
+    text-align: start;
+}
+
+.register {
+    background-color: rgba(255, 255, 255, 0.4);
+    margin: 0 20px;
+    width: 450px;
+    height: 500px;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 13px;
+}
+
+
+.register h2 {
+    margin-top: 100px;
+    margin-bottom: 80px;
+    font-size: 30px;
+}
+.register p {
+    margin-bottom: 80px;
+    font-size: 17px;
+    font-weight: bold;
+
+}
+.register button {
+    font-size: 18px;
+    border: none;
+    cursor: pointer;
+    background-color: rgba(168, 48, 48, 0.829);
+    color: white;
+    padding: 10px 90px;
+    border-radius: 8px;
+}
+
+.loging{
+    align-items: baseline;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 13px;
+}
+
+.loging h2 {
+    margin-top: 60px;
+    padding-left: 60px;
+}
+
+.loging .p1{
+    font-size: 15px;
+    margin-top: 35px;
+    margin-bottom: 20px;
+    font-weight: bold;
+    padding-left: 60px;
+}
+
+.logingSocial{
+    display: flex;
+    padding-left: 60px;
+}
+
+
+
+.facebook {
+    width: 30px;
+    height: 30px;
+    margin-top: 10px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+
+.google {
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+}
+
+.linkedin{
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+}
+
+.username{
+    margin-top: 40px;
+    padding-left: 60px;
+}
+
+.p2{
+    font-size: 12px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.username input {
+    border: none;
+    outline: none;
+    padding: 4px 7px;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.password{
+    margin-top: 30px;
+    padding-left: 60px;
+}
+
+.p3{
+    font-size: 12px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+.password input {
+    border: none;
+    outline: none;
+    padding: 4px 7px;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.B_signIn{
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+}
+
+.B_signIn button {
+    font-size: 18px;
+    border: none;
+    cursor: pointer;
+    background-color: rgba(168, 48, 48, 0.829);
+    color: white;
+    padding: 10px 90px;
+    border-radius: 8px;
+}
+
